--- a/main.html
+++ b/main.html
@@ -7,8 +7,8 @@
 </head>
 
 <body>
-	<div class="sizeInfo">
-       <h1 class="size"></h1>
+	<div class="sizeInfo" id="sizeInfo">
+       <h1></h1>
 	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
